# ascii-gif

./: .env  .gitignore  Cargo.toml  README.md  ascii-gif  frame.txt  frame_0.txt  frame_1.txt  frame_10.txt  frame_100.txt  frame_101.txt  frame_102.txt  frame_103.txt  frame_104.txt  frame_105.txt  frame_106.txt  frame_107.txt  frame_108.txt  frame_109.txt  frame_11.txt  frame_110.txt  frame_111.txt  frame_112.txt  frame_113.txt  frame_114.txt  frame_12.txt  frame_13.txt  frame_14.txt  frame_16.txt  frame_17.txt  frame_18.txt  frame_19.txt  frame_2.txt  frame_20.txt  frame_21.txt  frame_22.txt  frame_23.txt  frame_24.txt  frame_25.txt  frame_26.txt  (+80 more)
.github/workflows/: rust.yml
debug_frames/: frame_0.txt  frame_1.txt  frame_10.txt  frame_100.txt  frame_101.txt  frame_102.txt  frame_103.txt  frame_104.txt  frame_105.txt  frame_106.txt  frame_107.txt  frame_108.txt  frame_109.txt  frame_11.txt  frame_110.txt  frame_111.txt  frame_112.txt  frame_113.txt  frame_114.txt  frame_115.txt  frame_116.txt  frame_117.txt  frame_118.txt  frame_119.txt  frame_12.txt  frame_120.txt  frame_121.txt  frame_122.txt  frame_123.txt  frame_124.txt  frame_125.txt  frame_126.txt  frame_127.txt  frame_128.txt  frame_129.txt  frame_13.txt  frame_130.txt  frame_131.txt  frame_132.txt  frame_133.txt  (+111 more)
src/: http.rs  main.rs
src/ascii/: frame.rs  mod.rs  symbol.rs
src/ascii/gif/: frame.rs  mod.rs  player.rs
src/ascii_frame/: mod.rs
src/cli/: mod.rs
src/gif_2/: decoder.rs  mod.rs
src/gif_2/decoder/: mod.rs
src/gif_2/decoder/steps/: color_map.rs  extension_block.rs  image_descriptor.rs  mod.rs  raster_data.rs  screen_descriptor.rs  signature.rs
src/giphy/: mod.rs  types.rs
src/postprocessing/: downscaling.rs  mod.rs
src/postprocessor/: downscaling.rs  mod.rs
src/tenor/: mod.rs  types.rs
