[package]
name = "ascii-gif"
version = "0.1.6"
authors = ["Domenico Visconti <domenico.visconti819@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple cli to enjoy ascii-gif"
readme = "README.md"
homepage = "https://github.com/visd0m/ascii-gif"
repository = "https://github.com/visd0m/ascii-gif"
keywords = ["cli", "gif", "ascii"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.4", features = ["full"]}
chrono = {version = "0.4.13", features = ["serde"]}
serde_json = "1.0.56"
serde = {version = "1.0.114", features = ["derive"]}
hyper-tls = "0.5.0"
tokio = {version = "1.3.0", features = ["rt-multi-thread", "rt", "macros"]}
bytes = "1.0.1"
term_size = "0.3.2"
url = "2.1.1"
structopt = "0.3.15"
once_cell = "1.7.2"
lzw = "0.10.0"
yaged = "0.2.0"